--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.0",
+    "apexcharts": "^3.54.0",
     "express": "^4.18.2",
+    "ng-apexcharts": "^1.12.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
